# remembra

./: .dockerignore  .env.example  .gitignore  .rebuild  ARCHITECTURE.md  BUILD-BLUEPRINT.md  BUILD-PLAN.md  CHANGELOG.md  DOCKER.md  Dockerfile  Dockerfile.cloud  HANDOFF-v0.8.0.md  LICENSE  MASTER-RESEARCH-BRIEF.docx  PHASE1-RESEARCH.md  PRODUCT-SPEC.md  QA-REMEDIATION-RESULTS.md  README-polished.md  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-0.10.0-DRAFT.md  RELEASE-NOTES-v0.10.1.md  REMEMBRA-BUILD-PLAN.docx  REMEMBRA-DEEP-RESEARCH-REPORT.docx  REMEMBRA-DEEP-RESEARCH-REPORT.md  REMEMBRA-PRODUCTION-GO-LIVE-GUIDE.docx  REMEMBRA-REMEDIATION-PLAN.docx  SECURITY-AUDIT-2026-06.md  SECURITY-LOCKDOWN-REPORT.md  WHY-WE-WIN.md  docker-compose.mcp.yml  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.yml  fly.toml  glama.json  mkdocs.yml  pyproject.toml  quickstart.sh  server.json  (+1 more)
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  __init__.py  locomo_runner.py  results_20260307_040346.json  results_20260307_040346_summary.json
dashboard/: DEPLOYMENT.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  config.ts  index.css
dashboard/src/components/: ApiKeyManager.tsx  AppLayout.tsx  Billing.tsx  BrainInsights.tsx  DecayReport.tsx  EditMemory.tsx  EmptyState.tsx  EntityGraph.tsx  EntityGraphUniverse.tsx  EntityList.tsx  Header.tsx  KnowledgeGraph.tsx  MemoryCard.tsx  MemoryTimeline.tsx  ProjectSwitcher.tsx  Projects.tsx  QueryDebugger.tsx  Sidebar.tsx  StatsOverview.tsx  StoreMemory.tsx
dashboard/src/hooks/: useMemories.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  communityColors.ts  dateUtils.ts
dashboard/src/pages/: Admin.tsx  ApiKeys.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  Settings.tsx  Signup.tsx
dashboard/src/types/: react-force-graph-2d.d.ts
demo/: DEMO_SCRIPT.md  demo_fast.py  demo_recording.py
docs/: COMPETITOR-ANALYSIS.md  DEPLOYMENT.md  ENTITY-RESOLUTION.md  INTELLIGENT-EXTRACTION.md  SETUP-CHECKLIST.md  TROUBLESHOOTING.md  WEEK-12-RESEARCH.md  WEEK-9-RESEARCH.md  WEEK6-RESEARCH.md  WEEK8-RESEARCH.md  benchmarks.md  competitive-analysis-2026.md  connect.md  index.md
docs/bugs/: BUG-002-NAMESPACE-MISMATCH.md  PROJECT-NAMESPACE-MISMATCH.md
docs/case-studies/: multi-agent-collaboration.md
docs/concepts/: durability.md  entity-graph.md  how-it-works.md  memory-model.md
docs/examples/: chatbot.md  multi-user.md  rag-pipeline.md
docs/feedback/: remembra-codex-feedback-2026-03-15.md
docs/getting-started/: agent-setup.md  docker.md  installation.md  quickstart.md
docs/guides/: conversation-ingestion.md  entity-resolution.md  field-notes.md  import-export.md  index.md  javascript-sdk.md  multi-agent-shared-memory.md  plugins.md  python-sdk.md  rbac.md  rest-api.md  security.md  sleep-time-compute.md  temporal.md  webhooks.md
docs/integrations/: mcp-server.md
docs/reference/: api.md  changelog.md  configuration.md
docs/research/: COMPETITOR-ANALYSIS.md
docs/specs/: CONVERSATION-INGEST.md
extension/: README.md  manifest.json
extension/background/: background.js
extension/content/: content.css  content.js
extension/popup/: popup.css  popup.html  popup.js
hooks/: pre-commit
landing/: changelog.html  contact.html  dashboard.html  index-new.html  index-v2.html  index.html  package.json  pricing.html  privacy.html  security.html  signup.html  sitemap.xml  terms.html  vercel.json
landing/blog/: remembra-vs-mem0-vs-zep.html  self-hosting-ai-memory.html
landing/changelog/: v0.10.0.html  v0.12.0.html  v0.9.9.html
launch-content/: 01-hacker-news.md  02-reddit-localllama.md  03-reddit-selfhosted.md  04-reddit-machinelearning.md  05-twitter-thread.md  06-discord-posts.md  07-directories.md  08-devto-article.md
promo/: VIDEO-CREATION-GUIDE.md
scripts/: build-site.sh  install-hooks.sh  install_codex.py  install_remembra.py  remembra_bridge.py  remembra_doctor.py  setup_stripe.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: client.ts
site/: 404.html  index.html  site.webmanifest  sitemap.xml
site/.vercel/: project.json
site/CLAWDBOT-INTEGRATION-RESEARCH/: index.html
site/COMPETITOR-ANALYSIS/: index.html
site/DEPLOYMENT/: index.html
site/EMAIL_SETUP/: index.html
site/ENTITY-RESOLUTION/: index.html
site/INTELLIGENT-EXTRACTION/: index.html
site/SETUP-CHECKLIST/: index.html
site/TROUBLESHOOTING/: index.html
site/WEEK-12-RESEARCH/: index.html
site/WEEK-8-RESEARCH/: index.html
site/WEEK-9-RESEARCH/: index.html
site/WEEK6-RESEARCH/: index.html
site/WEEK7-RESEARCH/: index.html
site/WEEK7-SECURITY-CHECKLIST/: index.html
site/WEEK8-RESEARCH/: index.html
site/api/: index.html
site/benchmarks/: index.html
site/bugs/BUG-001-PROJECTSWITCHER-STATE/: index.html
site/bugs/BUG-002-NAMESPACE-MISMATCH/: index.html
site/case-studies/multi-agent-collaboration/: index.html
site/concepts/durability/: index.html
site/concepts/entity-graph/: index.html
site/guides/: index.html
site/sdks/: index.html
site/search/: search_index.json
src/remembra/: __init__.py  config.py  main.py
tests/: conftest.py  test_apikey_validation.py  test_billing_paddle.py  test_brain_analyzer.py  test_brain_communities.py  test_client.py  test_conflicts.py  test_conversation_ingest.py  test_debug_entity_graph.py  test_embeddings.py  test_encryption.py  test_entities.py  test_entity_merge.py  test_error_sanitizer.py  test_fts_query_sanitizer.py  test_health_build_sha.py  test_list_memories_project_filter.py  test_main.py  test_masterkey_auth.py  test_mcp_remote_auth.py  test_memory_get_malformed_id.py  test_plugins.py  test_recall_cross_project.py  test_recall_filters.py  test_retrieval.py  test_salience.py  test_schema_migration.py  test_shadow_ttl.py  test_spaces.py  test_supersession_recall.py  test_temporal.py  test_temporal_parser.py  test_tools_agents.py  test_tools_bridge.py  test_tools_codex.py  test_tools_doctor.py  test_v012_features.py
tests/load/: load-test-batch.js  load-test.js
(+155 files in other folders)
